--- a/app/src/main/res/layout/activity_cart_list.xml
+++ b/app/src/main/res/layout/activity_cart_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CartListActivity"
+    tools:context="com.proma.promaapp.CartListActivity"
     android:background="@color/white">
 
     <TextView
