--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -15,7 +15,7 @@
         android:textSize="24sp"
         android:layout_gravity="center"
         android:textColorHint="#555555"
-
+android:textColor="@color/black"
         app:backgroundTint="@color/black"
         android:layout_marginBottom="16dp"/>
 
