--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".OrderHistoryActivity"
+    tools:context="com.proma.promaapp.OrderHistoryActivity"
     android:background="@color/white">
 
     <TextView
