--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -11,7 +11,7 @@
         android:layout_centerInParent="true"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:context=".RegisterActivity">
+        tools:context="com.proma.promaapp.RegisterActivity">
 
         <!-- Email EditText -->
         <ImageView
